--- a/AuxWebSystem/Views/Shared/_LoginPartial.cshtml
+++ b/AuxWebSystem/Views/Shared/_LoginPartial.cshtml
@@ -22,8 +22,9 @@
 </div>      
 <div style="border: 0; display: none; position: absolute; background-color: rgba(0,0,0,.6); color: white; padding: 0 10%;" class="conte">
     <div><a href="/User/Logoff" style=" color: rgba(255,255,255,0.9);">注销</a></div>
-    <div><a href="/User/ModityUserPage" style=" color: rgba(255,255,255,0.9);">修改</a></div>
+    <div><a href="/User/ModityUserPage" style=" color: rgba(255,255,255,0.9);">个人信息</a></div>
 </div>
+
 <script>
     $('.loginn').click(function () {
         $('.conte').toggle();
