--- a/AuxWebSystem/Content/themes/base/jquery-ui.css
+++ b/AuxWebSystem/Content/themes/base/jquery-ui.css
@@ -981,10 +981,15 @@ a.ui-button:focus {
 a.ui-button:active,
 .ui-button:active,
 .ui-button.ui-state-active:hover {
-	border: 1px solid #003eff;
+	/*border: 1px solid #003eff;
 	background: #007fff;
 	font-weight: normal;
-	color: #ffffff;
+	color: #ffffff;*/
+    border: 1px solid #333642;
+    background: #f6f6f6;
+    font-weight: normal;
+    color: #454545;
+    opacity: 0.5;
 }
 .ui-icon-background,
 .ui-state-active .ui-icon-background {
