--- a/AuxWebSystem/Views/Home/Index.cshtml
+++ b/AuxWebSystem/Views/Home/Index.cshtml
@@ -29,12 +29,12 @@
 
                 <div>
                     <label for="username">用户名:</label>
-                    <input type="text" name="LogName" id="username" placeholder="&nbsp;&nbsp;用户名" value="admin" />
+                    <input type="text" name="LogName" id="username" placeholder="&nbsp;&nbsp;用户名" />
                 </div>
 
                 <div>
                     <label for="password">密码:</label>
-                    <input type="password" name="Password" id="password" placeholder="&nbsp;&nbsp;密码" value="123456" />
+                    <input type="password" name="Password" id="password" placeholder="&nbsp;&nbsp;密码" />
                 </div>
 
                 <div>
