--- a/AuxWebSystem/Views/Parameter/Holiday.cshtml
+++ b/AuxWebSystem/Views/Parameter/Holiday.cshtml
@@ -9,66 +9,66 @@
             <form>
                 <div class="datePicker" style="height:330px;width:450px;margin: -1% auto 0;"></div>
             </form>
-            <script src="~/Content/jquery/jquery-1.12.3.js"></script>
             <script src="~/Content/jquery/jquery-ui.min.js" type="text/javascript"></script>
             <script type="text/javascript">
-    $((function ($) {
-        $.datepicker.regional['zh-CN'] = {
-            clearText: '清除',
-            clearStatus: '清除已选日期',
-            closeText: '关闭',
-            closeStatus: '不改变当前选择',
-            prevText: '<上月',
-            prevStatus: '显示上月',
-            prevBigText: '<<',
-            prevBigStatus: '显示上一年',
-            nextText: '下月>',
-            nextStatus: '显示下月',
-            nextBigText: '>>',
-            nextBigStatus: '显示下一年',
-            currentText: '今天',
-            currentStatus: '显示本月',
-            monthNames: ['一月', '二月', '三月', '四月', '五月', '六月', '七月', '八月', '九月', '十月', '十一月', '十二月'],
-            monthNamesShort: ['一', '二', '三', '四', '五', '六', '七', '八', '九', '十', '十一', '十二'],
-            monthStatus: '选择月份',
-            yearStatus: '选择年份',
-            weekHeader: '周',
-            weekStatus: '年内周次',
-            dayNames: ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'],
-            dayNamesShort: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'],
-            dayNamesMin: ['日', '一', '二', '三', '四', '五', '六'],
-            dayStatus: '设置 DD 为一周起始',
-            dateStatus: '选择 m月 d日, DD',
-            dateFormat: 'yy-mm-dd',
-            firstDay: 1,
-            initStatus: '请选择日期',
-            isRTL: false
-        };
-        $.datepicker.setDefaults($.datepicker.regional['zh-CN']);
-    })(jQuery));
+                $((function ($) {
+                    $.datepicker.regional['zh-CN'] = {
+                        clearText: '清除',
+                        clearStatus: '清除已选日期',
+                        closeText: '关闭',
+                        closeStatus: '不改变当前选择',
+                        prevText: '<上月',
+                        prevStatus: '显示上月',
+                        prevBigText: '<<',
+                        prevBigStatus: '显示上一年',
+                        nextText: '下月>',
+                        nextStatus: '显示下月',
+                        nextBigText: '>>',
+                        nextBigStatus: '显示下一年',
+                        currentText: '今天',
+                        currentStatus: '显示本月',
+                        monthNames: ['一月', '二月', '三月', '四月', '五月', '六月', '七月', '八月', '九月', '十月', '十一月', '十二月'],
+                        monthNamesShort: ['一', '二', '三', '四', '五', '六', '七', '八', '九', '十', '十一', '十二'],
+                        monthStatus: '选择月份',
+                        yearStatus: '选择年份',
+                        weekHeader: '周',
+                        weekStatus: '年内周次',
+                        dayNames: ['星期日', '星期一', '星期二', '星期三', '星期四', '星期五', '星期六'],
+                        dayNamesShort: ['周日', '周一', '周二', '周三', '周四', '周五', '周六'],
+                        dayNamesMin: ['日', '一', '二', '三', '四', '五', '六'],
+                        dayStatus: '设置 DD 为一周起始',
+                        dateStatus: '选择 m月 d日, DD',
+                        dateFormat: 'yy-mm-dd',
+                        firstDay: 1,
+                        initStatus: '请选择日期',
+                        isRTL: false
+                    };
+                    $.datepicker.setDefaults($.datepicker.regional['zh-CN']);
+                })(jQuery));
 
 
-    /*节假日以及周末只读*/
-    @{
+                /*节假日以及周末只读*/
+                @{
                     String str = @ViewBag.dayString;
                 }
-    var holidays = [ @{ Output.Write(str); }];
-    /*
-    var holidays = ["12/24", "12/25", "1/1", "1-24-2017",
-          "5/27", "7/4", "9/2", "11/28",
-          "11/29", "12/24", "12/25"];
-    */
+                var holidays = [ @{ Output.Write(str); }];
+                /*
+                var holidays = ["12/24", "12/25", "1/1", "1-24-2017",
+                      "5/27", "7/4", "9/2", "11/28",
+                      "11/29", "12/24", "12/25"];
+                */
                 @{
                     String displayDay = ViewBag.displayDate;
                 }
-                $( ".datePicker" ).datepicker({
-                    beforeShowDay: function(date){
+
+                $(".datePicker").datepicker({
+                    beforeShowDay: function (date) {
                         show = true;
                         //if(date.getDay() == 0 || date.getDay() == 6){show = false;}//No Weekends
                         for (var i = 0; i < holidays.length; i++) {
-                            if (new Date(holidays[i]).toString() == date.toString()) {show = false;}//No Holidays
+                            if (new Date(holidays[i]).toString() == date.toString()) { show = false; }//No Holidays
                         }
-                        var display = [show,'',(show)?'':'Holidays'];//With Fancy hover tooltip!
+                        var display = [show, '', (show) ? '' : 'Holidays'];//With Fancy hover tooltip!
                         return display;
                     },
                     changeMonth: true,
@@ -114,7 +114,7 @@
                                     <td style='text-align:center;'>@row["HolidayReason"]</td>
                                     <td style='text-align:center;'>@startTime.ToString("yyyy-MM-dd HH:mm")</td>
                                     <td style='text-align:center;'>@endTime.ToString("yyyy-MM-dd HH:mm")</td>
-                                    <td style='text-align:center;'><button class='btn btn-info cancel' name="@row["ID"]">删除</button> </td>
+                                    <td style='text-align:center;'><button class='btn btn-info cancel' name="@row["ID"]" data-toggle="modal">删除</button> </td>
                                 </tr>
                             }
 
@@ -123,12 +123,28 @@
                 </table>
             </div>
             </br>
-            <div class='text-center'>
-                <a href="#" data-toggle='modal' data-target='#zengjiajiejiari'><button class='btn btn-info'>增加选项</button></a>
 
+
+            <div class="modal fade" id='HolidayDelete' tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content" style='padding:1%;text-align:center;'>
+
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+
+                        <h3>请确定是否删除？</h3>
+
+                        </br>
+                        <button class="btn btn-info hldaydelete">确定</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <button class="btn btn-delete" data-dismiss="modal">取消</button>
+
+                    </div>
+                </div>
+            </div>
+
+            <div class='text-center'>
+                <a href="#" data-toggle='modal' data-target='#zengjiajiejiari'><button class='btn btn-info'>增加</button></a>
             </div>
             <!-- 	<div class="modal fade text-center" id='add' tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"> -->
-
         </div>
     </div>
 </div>
@@ -137,26 +153,125 @@
 <div class="modal fade text-center" id='zengjiajiejiari' tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class='modal-dialog'>
         <div class='modal-content' style='padding:20% 15%;'>
-            <form class="form-horizontal">
+            <form class="form-horizontal" id="addHolidayForm" onsubmit="return addHoliday();">
                 <fieldset>
 
                     <div class="control-group">
                         <label class="control-label" for="reservationtime">节假日设置：</label>
-                        <input placeholder='请输入放假原因' name='yuanyin' />
+                        <input placeholder='请输入放假原因' name='HolidayReason' />
                         </br>
                         <br />
                         <div class="controls">
                             <div class="input-prepend input-group">
                                 <span class="add-on input-group-addon"><i class="glyphicon glyphicon-calendar fa fa-calendar"></i></span>
-                                <input type="text" style="width: 400px" name="reservation" id="reservationtime" class="form-control" value="2017-01-12 1:00 - 2017-01-13 1:30" class="span4">
+                                <input type="text" style="width: 400px" name="reservation" id="reservationtime" class="form-control span4">
                             </div>
-
                         </div>
+
+                        <input type="hidden" name="StartTime" id="addHolidayStartTime" />
+                        <input type="hidden" name="EndTime" id="addHolidayEndTime" />
+
                     </div>
                 </fieldset>
+
+                </br>
+                <button class='btn btn-info' type="submit">确定</button>
             </form>
-            </br>
-            <button class='btn btn-info' data-dismiss='modal'>确定</button>
+
+            <script type="text/javascript">
+                function addHoliday() {
+                    var cont = $("#addHolidayForm").serialize();
+                    $.ajax({
+                        url: '/Parameter/AddHoliday',
+                        type: 'post',
+                        dataType: 'json',
+                        data: cont,
+                        beforeSend: function () {
+                            if ($("input[name='HolidayReason']").val().match(/\S/)) {
+                                return true;
+                            }
+                            $("#zengjiajiejiari").modal("hide");
+                            Showbo.Msg.alert("请检查放假原因");
+                            return false;
+                        },
+                        success: function (data) {
+                            //obj = JSON.parse(data);
+                            $("#zengjiajiejiari").modal("hide");
+                            Showbo.Msg.alert(data.message);
+                            if (data.state == 1) {
+
+                                location.reload(true);
+                                $("input[name='HolidayReason']").val('');
+                                $('#addHolidayStartTime').val('');
+                                $('#addHolidayEndTime').val('');
+                            }
+                        }
+                    });
+                    return false;
+
+                }
+
+                function addRow(holidayId) {
+                    //原来的行数    比如：此处获得表格的行数是5，则每一行对应的index是0~4，所以下面在insertRow时，使用的是表格的当前行数
+                    var currentRows = document.getElementById("tb").rows.length;
+                    var insertTr = document.getElementById("tb").insertRow(currentRows);
+
+                    insertTd = insertTr.insertCell(0);
+                    insertTd.style.textAlign = "center";
+                    insertTd.innerHTML = $("input[name='HolidayReason']").val();
+
+                    insertTd = insertTr.insertCell(1);
+                    insertTd.style.textAlign = "center";
+                    insertTd.innerHTML = $('#addHolidayStartTime').val();
+
+                    insertTd = insertTr.insertCell(2);
+                    insertTd.style.textAlign = "center";
+                    insertTd.innerHTML = $('#addHolidayEndTime').val();
+
+                    insertTd = insertTr.insertCell(3);
+                    insertTd.style.textAlign = "center";
+                    insertTd.innerHTML = "<button class='btn btn-info cancel' style='text-align:center;' data-toggle='modal' name='" + holidayId + "'>删除</button>";
+
+                    $('.cancel').click(function () {
+                        $("#HolidayDelete").modal();
+                        var xmlhttp;
+                        var me = this;
+                        $('.hldaydelete').click(function () {
+                            if (window.XMLHttpRequest) {
+                                // code for IE7+, Firefox, Chrome, Opera, Safari
+                                xmlhttp = new XMLHttpRequest();
+                            }
+                            else {
+                                // code for IE6, IE5
+                                xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+                            }
+
+                            xmlhttp.onreadystatechange = function () {
+                                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                                    jobj = JSON.parse(xmlhttp.responseText);
+                                    $("#HolidayDelete").modal("hide");
+                                    Showbo.Msg.alert(jobj.message);
+                                    if (jobj.state == 0) {
+                                        return false;
+                                    } else {
+                                        location.reload(true);
+                                        return true;
+                                    }
+                                }
+                            }
+
+                            xmlhttp.open("GET", "/Parameter/DeleteHoliday/" + $(me).attr('name'), true);
+                            xmlhttp.send();
+
+                        });
+
+
+                    });
+
+                }
+            </script>
+
+
             <script type="text/javascript" src='~/Content/jquery/moment.js'></script>
             <script type="text/javascript" src='~/Content/jquery/daterangepicker.js'></script>
             <script type="text/javascript">
@@ -164,40 +279,16 @@
                     $('#reservationtime').daterangepicker({
                         timePicker: true,
                         timePickerIncrement: 30,
+                        defaultDate: "@displayDay",
                         format: 'YYYY-MM-DD hh:mm'
                     }, /*function(start, end, label) {
                     console.log(start.toISOString(), end.toISOString(), label);
                   }*/
                       function (start, end, label) {
 
-                          addRow();
-                          function addRow() {
-                              //原来的行数    比如：此处获得表格的行数是5，则每一行对应的index是0~4，所以下面在insertRow时，使用的是表格的当前行数
-                              var currentRows = document.getElementById("tb").rows.length;
-                              var insertTr = document.getElementById("tb").insertRow(currentRows);
-
-                              insertTd = insertTr.insertCell(0);
-                              insertTd.style.textAlign = "center";
-                              insertTd.innerHTML = $("input[name='yuanyin']").val();
-
-                              insertTd = insertTr.insertCell(1);
-                              insertTd.style.textAlign = "center";
-                              insertTd.innerHTML = start.format('YYYY-MM-DD hh:mm');
-
-                              insertTd = insertTr.insertCell(2);
-                              insertTd.style.textAlign = "center";
-                              insertTd.innerHTML = end.format('YYYY-MM-DD hh:mm');
-
-                              insertTd = insertTr.insertCell(3);
-                              insertTd.style.textAlign = "center";
-                              insertTd.innerHTML = "<button class='btn btn-info cancel' style='text-align:center;'>删除</button>";
-                              return 0;
-                          }
-                          $('.cancel').click(function () {
-                              $(this).parent().parent('tr').remove();
-
-                          })
-
+                          //alert('start: ' + start.format('YYYY-MM-DD hh:mm:ss') + '\n' + 'end: ' + end.format('YYYY-MM-DD hh:mm:ss'));
+                          $('#addHolidayStartTime').val(start.format('YYYY-MM-DD hh:mm:ss'));
+                          $('#addHolidayEndTime').val(end.format('YYYY-MM-DD hh:mm:ss'));
                       }
                     );
                 });
@@ -211,33 +302,41 @@
     })
 
     $('.cancel').click(function () {
+        $("#HolidayDelete").modal();
         var xmlhttp;
         var me = this;
-        if (window.XMLHttpRequest) {
-            // code for IE7+, Firefox, Chrome, Opera, Safari
-            xmlhttp = new XMLHttpRequest();
-        }
-        else {
-            // code for IE6, IE5
-            xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
-        }
+        $('.hldaydelete').click(function () {
+            if (window.XMLHttpRequest) {
+                // code for IE7+, Firefox, Chrome, Opera, Safari
+                xmlhttp = new XMLHttpRequest();
+            }
+            else {
+                // code for IE6, IE5
+                xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+            }
 
-        xmlhttp.onreadystatechange = function () {
-            if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-                jobj = JSON.parse(xmlhttp.responseText);
-                alert(jobj.message);
-                if (jobj.state == 0) {
-                    return false;
-                } else {
-                    $(me).parent().parent('tr').remove();
-                    return true;
+            xmlhttp.onreadystatechange = function () {
+                if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+                    jobj = JSON.parse(xmlhttp.responseText);
+                    $("#HolidayDelete").modal("hide");
+                    Showbo.Msg.alert(jobj.message);
+                    if (jobj.state == 0) {
+                        return false;
+                    } else {
+                        location.reload(true);
+                        return true;
+                    }
                 }
             }
-        }
 
-        xmlhttp.open("GET", "/Parameter/DeleteHoliday/" + $(this).attr('name'), true);
-        xmlhttp.send();
+            xmlhttp.open("GET", "/Parameter/DeleteHoliday/" + $(me).attr('name'), true);
+            xmlhttp.send();
 
-    })
+        });
+
+
+    });
+
+
 
 </script>
