--- a/AuxWebSystem/Views/Shared/_Layout.cshtml
+++ b/AuxWebSystem/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
     <title>@ViewBag.Title</title>
     <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'>
     <link href="~/Content/css/showBo.css" rel="stylesheet" />
-    <script type="text/javascript" src='~/Content/jquery/jquery-1.12.3.js'></script>
+    <script src="~/Content/jquery/jquery-3.0.0.min.js"></script>
+    <!--<script type="text/javascript" src='~/Content/jquery/jquery-1.12.3.js'></script>-->
     <link rel="stylesheet" href="/Content/css/bootstrap.min.css">
     <script src="~/Content/jquery/bootstrap.min.js"></script>
     <script type="text/javascript" src='~/Content/jquery/dataTables.min.js'></script>
@@ -19,10 +20,11 @@
     <script type="text/javascript" src='~/Content/jquery/moment.js'></script>
     <script type="text/javascript" src='~/Content/jquery/daterangepicker.js'></script>
     <link rel="stylesheet" type="text/css" href="~/Content/css/daterangepicker-bs3.css">
-    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" type="text/css"/>
+    <link rel="stylesheet" href="~/Content/themes/base/jquery-ui.css" type="text/css" />
     <script type="text/javascript" src='~/Content/jquery/ajaxfrom.js'></script>
-    
-    
+    <script type="text/javascript" src='~/Content/jquery/countUp.min.js'></script>
+
+
     <style type="text/css">
         * {
             margin: 0;
@@ -92,59 +94,80 @@
             color: black;
             background: #36608a;
         }
+
         #add input {
             width: 95px;
         }
+
         #addshiyantai input {
             width: 90px;
+        }
     </style>
 
 
 
 </head>
 <body>
-        
-        <ul id='daohanglan'>
-            <li style='padding-left:10%;'></li>
-            <li class="yonghuguanli">
-                <a name='yonghuguanli' href="/User/WebUserManager">Web用户管理</a>
-            </li>
-            <li class="canshupeizhi">
-                <a href="#" class='canshu'>参数配置</a>
-                <div style='position:absolute;display:none;z-index: 1;' class='peizhi'>
-                    <div><a href="/Parameter/StandardParameter">标准实验</a></div>
-                    <div><a href="/Parameter/Holiday">节假日设置</a></div>
-                    <div><a href="/Parameter/SystemParameterSetting">系统参数设置</a></div>
-                </div>
-            </li>
-            <li class="shujuchakan">
-                <a href="/Dataview/">数据查看</a>
-            </li>
+    @{
 
-            <li class="shiyantaixinxi">
-                <a href="/Labinfo/">试验台信息</a>
-            </li>
-            <li style='float:right;border-left:1px solid rgba(0,0,0,.3);'>
-                <section>
-                    @Html.Partial("_LoginPartial")
-                </section>
+        String sessString = AuxWebSystem.Helpers.UserSecurityHelper.sessionName;
+        Object obj = Session[sessString];
+        if (null != obj)
+        {
+            AuxWebSystem.Models.UserTableModel user = (AuxWebSystem.Models.UserTableModel)obj;
+            if (user.isAdminUser())
+            {
+                <ul id='daohanglan'>
+                    <li style='padding-left:10%;'></li>
+                    <li class="yonghuguanli">
+                        <a name='yonghuguanli' href="/User/WebUserManager">用户管理</a>
+                    </li>
+                    <li class="canshupeizhi">
+                        <a href="#" class='canshu'>参数配置</a>
+                        <div style='position:absolute;display:none;z-index: 1;' class='peizhi'>
+                            <div><a href="/Parameter/StandardParameter">标准实验</a></div>
+                            <div><a href="/Parameter/Holiday">节假日</a></div>
+                            <div><a href="/Parameter/SystemParameterSetting">系统参数</a></div>
+                        </div>
+                    </li>
+                    <li class="shujuchakan">
+                        <a href="/Dataview/">数据查看</a>
+                    </li>
 
-            </li>
-        </ul>
-    
-        <section>
-            @RenderBody()
-        </section>
-        <script>
-            $(document).ready(function () {
-                $('.signal').bind('DOMNodeInserted', function (e) {
-                    if ($(e.target).text() == '标准实验') {
-                        alert('text');
-                    }
-                })
+                    <li class="shiyantaixinxi">
+                        <a href="/Labinfo/">试验台信息</a>
+                    </li>
+                    <li style='float:right;border-left:1px solid rgba(0,0,0,.3);'>
+                        <section>
+                            @Html.Partial("_LoginPartial")
+                        </section>
+                    </li>
+                </ul>
+            }
+            else
+            {
+                <ul id='daohanglan'>
+                    <li style='float:right;border-left:1px solid rgba(0,0,0,.3);'>
+                        <section>
+                            @Html.Partial("_LoginPartial")
+                        </section>
+                    </li>
+                </ul>
+            }
+        }
+    }
+    <section>
+        @RenderBody()
+    </section>
+    <script>
+        $(document).ready(function () {
+            $('.signal').bind('DOMNodeInserted', function (e) {
+                if ($(e.target).text() == '标准实验') {
+                    Showbo.Msg.alert('text');
+                }
             })
-           
-        </script>
-
+        })
+       
+    </script>
 </body>
 </html>
